# opencv-glib

./: .dir-locals.el  .dockerignore  .gitignore  .travis.yml  Brewfile  Gemfile  README.md  meson.build  meson_options.txt  run.sh
.github/workflows/: linux.yml  mac-os.yml
doc/: news.md
doc/reference/: entities.xml.in  meson.build  opencv-glib-docs.xml
dockerfiles/: arch-linux.dockerfile  debian-10.dockerfile  debian-11.dockerfile  fedora-latest.dockerfile  fedora-rawhide.dockerfile  ubuntu-18.04.dockerfile  ubuntu-20.04.dockerfile
opencv-glib/: camera-error.cpp  camera-error.h  camera.cpp  camera.h  camera.hpp  cascade-classifier-error.cpp  cascade-classifier-error.h  cascade-classifier.cpp  cascade-classifier.h  cascade-classifier.hpp  color.cpp  color.h  color.hpp  config.h.meson  error.cpp  error.h  image-error.cpp  image-error.h  image.cpp  image.h  image.hpp  matrix.cpp  matrix.h  matrix.hpp  meson.build  opencv-glib.h  opencv-glib.hpp  point.cpp  point.h  point.hpp  rectangle.cpp  rectangle.h  rectangle.hpp  size.cpp  size.h  size.hpp  video-capture.cpp  video-capture.h  video-capture.hpp
test/: run-test.rb  run-test.sh  test-cascaded-classifier.rb  test-color.rb  test-image.rb  test-matrix.rb  test-point.rb  test-rectangle.rb  test-size.rb
travis/: Dockerfile.ubuntu-18.04
